--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>Mapa de Clientes - Google Maps</title>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📍</text></svg>">
 
+<!-- Material Icons -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <style>
     :root {
         --primary-color: #4285f4;
