--- a/index.html
+++ b/index.html
@@ -5533,15 +5533,17 @@ async function startCamera() {
         }
     }
 
+    // 🎯 CONSTRAINTS EXATAMENTE COMO O GEMINI ESPECIFICA
     const constraints = {
         video: {
-            facingMode: currentFacingMode,
-            width: { ideal: 1920, min: 1280 },
-            height: { ideal: 1080, min: 720 },
-            // Otimizações para leitura de QR Code
-            focusMode: { ideal: 'continuous' },
-            exposureMode: { ideal: 'continuous' },
-            whiteBalanceMode: { ideal: 'continuous' }
+            facingMode: "environment", // Prioriza a câmera traseira (como Gemini especificou)
+            // Resolução otimizada para QR Code
+            width: { ideal: 640 },  // Gemini: usar 640x480 para melhor performance
+            height: { ideal: 480 },
+            // ✨ Configurações DIRETAS (sem { ideal: ... }) como Gemini especificou
+            focusMode: "continuous",      // Mantém foco no objeto
+            exposureMode: "continuous",   // Ajusta exposição automaticamente
+            whiteBalanceMode: "continuous"
         }
     };
 
@@ -5550,6 +5552,32 @@ async function startCamera() {
 
         // Garantir que o vídeo recebe o stream
         qrVideo.srcObject = videoStream;
+
+        // 💡 Aplicar configurações avançadas da câmera (se suportado)
+        try {
+            const videoTrack = videoStream.getVideoTracks()[0];
+            const capabilities = videoTrack.getCapabilities();
+
+            // Aplicar configurações avançadas se disponíveis
+            const advancedConstraints = {};
+
+            if (capabilities.exposureCompensation) {
+                advancedConstraints.exposureCompensation = 2.5; // MUITO aumentado de 1 para 2.5
+            }
+            if (capabilities.brightness) {
+                advancedConstraints.brightness = capabilities.brightness.max * 0.9; // 90% do brilho máximo (era 70%)
+            }
+            if (capabilities.contrast) {
+                advancedConstraints.contrast = capabilities.contrast.max * 0.75; // 75% do contraste máximo (era 60%)
+            }
+
+            if (Object.keys(advancedConstraints).length > 0) {
+                await videoTrack.applyConstraints({ advanced: [advancedConstraints] });
+                console.log('✨ Configurações avançadas de brilho aplicadas:', advancedConstraints);
+            }
+        } catch (err) {
+            console.warn('⚠️ Configurações avançadas não suportadas neste dispositivo:', err);
+        }
 
         // Mostrar container da câmera
         qrCameraContainer.classList.add('active');
@@ -7973,21 +8001,50 @@ async function startPackageCamera() {
         }
     }
 
+    // 🎯 CONSTRAINTS EXATAMENTE COMO O GEMINI ESPECIFICA
     const constraints = {
         video: {
-            facingMode: packageCurrentFacingMode,
-            width: { ideal: 1920, min: 1280 },
-            height: { ideal: 1080, min: 720 },
-            // Otimizações para leitura de QR Code
-            focusMode: { ideal: 'continuous' },
-            exposureMode: { ideal: 'continuous' },
-            whiteBalanceMode: { ideal: 'continuous' }
+            facingMode: "environment", // Prioriza a câmera traseira (como Gemini especificou)
+            // Resolução otimizada para QR Code
+            width: { ideal: 640 },  // Gemini: usar 640x480 para melhor performance
+            height: { ideal: 480 },
+            // ✨ Configurações DIRETAS (sem { ideal: ... }) como Gemini especificou
+            focusMode: "continuous",      // Mantém foco no objeto
+            exposureMode: "continuous",   // Ajusta exposição automaticamente
+            whiteBalanceMode: "continuous"
         }
     };
 
     try {
         packageVideoStream = await navigator.mediaDevices.getUserMedia(constraints);
         qrPackageVideo.srcObject = packageVideoStream;
+
+        // 💡 Aplicar configurações avançadas da câmera (se suportado)
+        try {
+            const videoTrack = packageVideoStream.getVideoTracks()[0];
+            const capabilities = videoTrack.getCapabilities();
+
+            // Aplicar configurações avançadas se disponíveis
+            const advancedConstraints = {};
+
+            if (capabilities.exposureCompensation) {
+                advancedConstraints.exposureCompensation = 2.5; // MUITO aumentado de 1 para 2.5
+            }
+            if (capabilities.brightness) {
+                advancedConstraints.brightness = capabilities.brightness.max * 0.9; // 90% do brilho máximo (era 70%)
+            }
+            if (capabilities.contrast) {
+                advancedConstraints.contrast = capabilities.contrast.max * 0.75; // 75% do contraste máximo (era 60%)
+            }
+
+            if (Object.keys(advancedConstraints).length > 0) {
+                await videoTrack.applyConstraints({ advanced: [advancedConstraints] });
+                console.log('✨ [Package Scanner] Configurações avançadas de brilho aplicadas:', advancedConstraints);
+            }
+        } catch (err) {
+            console.warn('⚠️ [Package Scanner] Configurações avançadas não suportadas:', err);
+        }
+
         qrPackageCameraContainer.classList.add('active');
 
         return new Promise((resolve, reject) => {
